# png2hdr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/png2hdr/: __init__.py  cli.py  icc.py
tests/: test_png2hdr.py
