[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "png2hdr"
version = "0.2.2"
description = "Convert images to BT.2100 PQ HDR in a container that survives upload pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Daan van der Zwaag" }]
keywords = ["hdr", "pq", "st2084", "bt2100", "rec2020", "icc", "cicp", "png", "jpeg"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Multimedia :: Graphics",
]
dependencies = ["numpy>=1.24", "pillow>=10.0"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/danoszz/png2hdr"
Issues = "https://github.com/danoszz/png2hdr/issues"

[project.scripts]
png2hdr = "png2hdr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/png2hdr"]
